--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,5 +28,5 @@ jobs:
           curl -X POST https://api.github.com/repos/:mayankmj/:repo-2/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -u ${{ secrets.ACTIONS_KEY }} \
-          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
+          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "https://github.com/mayankmj/repo-2/" }}'
       - uses: actions/checkout@v3
