--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,21 @@
 name: workflow_01
 on:
   workflow_dispatch:
-     inputs:
+    inputs:
       workflow_02:
         description: 'ًWorkflow 2 which will be triggered'
         required: true
         default: 'workflow_02'
-
+        
       workflow2_github_account:
-        description: 'Mayank Johari'
+        description: 'GitHub account for Workflow 2'
         required: true
-        default: ':mayankmj'
-
+        default: 'mayankmj'
+        
       workflow2_repo_github:
-        description: 'repo-2'
+        description: 'GitHub repository for Workflow 2'
         required: true
-        default: ':repo-2' 
+        default: 'repo-2'
 
 jobs:
   build:
@@ -23,10 +23,12 @@ jobs:
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Test
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Trigger Workflow 2
         run: |
-          curl -X POST https://api.github.com/repos/:mayankmj/:repo-2/dispatches \
+          curl -X POST https://api.github.com/repos/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
-          -u ${{ secrets.ACTIONS_KEY }} \
-          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "https://github.com/mayankmj/repo-2/" }}'
-      - uses: actions/checkout@v3
+          -H 'Authorization: token ${{ secrets.ACTIONS_KEY }}' \
+          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "https://github.com/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}" }}'
