--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
     inputs:
       workflow_02:
-        description: 'ًWorkflow 2 which will be triggered'
+        description: 'Workflow 2 which will be triggered'
         required: true
         default: 'workflow_02'
       workflow2_github_account:
@@ -32,7 +32,12 @@ jobs:
 
       - name: Trigger Workflow 2
         run: |
-          curl -X POST https://api.github.com/repos/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}/dispatches \
+          response=$(curl -s -o /dev/null -w "%{http_code}" -X POST https://api.github.com/repos/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}/dispatches \
           -H 'Accept: application/vnd.github.everest-preview+json' \
           -H 'Authorization: token ${{ secrets.ACTIONS_KEY }}' \
-          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "https://github.com/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}" }}'
+          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "https://github.com/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}" }}')
+          echo "HTTP status code: $response"
+          if [ "$response" -ne 204 ]; then
+            echo "Failed to trigger workflow"
+            exit 1
+          fi
