--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,28 @@
-name: workflow_01
+name: Workflow01
 on:
-  workflow_dispatch:
-    inputs:
-      workflow_02:
-        description: 'ًWorkflow 2 which will be triggered'
-        required: true
-        default: 'workflow_02'
-        
-      workflow2_github_account:
-        description: 'GitHub account for Workflow 2'
-        required: true
-        default: 'mayankmj'
-        
-      workflow2_repo_github:
-        description: 'GitHub repository for Workflow 2'
-        required: true
-        default: 'repo-2'
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 600
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout to repository
         uses: actions/checkout@v3
 
-      - name: Debug curl command
-        run: |
-          echo "curl -X POST https://api.github.com/repos/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -H 'Authorization: token ${{ secrets.ACTIONS_KEY }}' \
-          --data '{\"event_type\": \"Trigger Workflow\", \"client_payload\": { \"repository\": \"https://github.com/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}\" }}'"
+      # Your existing workflow steps
 
-      - name: Trigger Workflow 2
-        run: |
-          curl -X POST https://api.github.com/repos/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}/dispatches \
-          -H 'Accept: application/vnd.github.everest-preview+json' \
-          -H 'Authorization: token ${{ secrets.ACTIONS_KEY }}' \
-          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "https://github.com/${{ github.event.inputs.workflow2_github_account }}/${{ github.event.inputs.workflow2_repo_github }}" }}'
+  trigger-workflow02:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Trigger Workflow02
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.PAT_TOKEN }}
+          repository: mayankmj/repo-2
+          event-type: trigger-workflow02
