--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Your existing workflow steps go here
+      # Your existing workflow steps 
 
       # Add a step to trigger the workflow in another repository
       - name: Trigger Workflow_02
