--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Your existing workflow steps 
+      # Your existing workflow steps go here
 
-      # Add a step to trigger the workflow in another repository
+  trigger-workflow02:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Trigger Workflow_02
-        run: |
-          curl -X POST \
-            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
-            -H "Accept: application/vnd.github.v3+json" \
-            https://api.github.com/repos/mayankmj/repo-2/actions/workflows/workflow_02.yml/dispatches \
-            -d '{"ref":"main"}'
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.ACTION_KEY }}  # Use your PAT_TOKEN secret here
+          repository: mayankmj/repo-2
+          event-type: trigger-workflow02
+          client-payload: '{}'  # Empty payload if not required
