--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,33 @@
-name: Workflow_01
+name: Trigger Target Workflow
+
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      target_service:
+        description: 'Input a service name (e.g., demo-app)'
+        required: true
+      target_version:
+        description: 'Input a version (e.g., v1.0.0)'
+        required: true
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 600
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      # Your existing workflow steps go here
-
-  trigger-workflow_02:
-    needs: build
+  trigger:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Trigger workflow_02
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ secrets.ACTION_KEY }}  # Use your PAT_TOKEN secret here
-          repository: mayankmj/repo-2
-          event-type: trigger-workflow02
-          client-payload: '{}'  # Empty payload if not required
+      - name: Trigger Workflow in Another Repository
+        run: |
+          # Set the required variables
+          repo_owner="REPOSITORY OWNER" 
+          repo_name="REPOSITORY NAME"  
+          event_type="trigger-workflow" 
+          service="${{ github.event.inputs.target_service }}"
+          version="${{ github.event.inputs.target_version }}"
+  
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.ACTION_KEY }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/mayankmj/repo-2/dispatches \
+            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"version\": \"$version\", \"unit\": false, \"integration\": true}}"
