--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Trigger Target Workflow
+name: Call Reusable Workflow
 
 on:
   workflow_dispatch:
@@ -11,23 +11,8 @@ on:
         required: true
 
 jobs:
-  trigger:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Trigger Workflow in Another Repository
-        run: |
-          # Set the required variables
-          repo_owner="REPOSITORY OWNER" 
-          repo_name="REPOSITORY NAME"  
-          event_type="trigger-workflow" 
-          service="${{ github.event.inputs.target_service }}"
-          version="${{ github.event.inputs.target_version }}"
-  
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.ACTION_KEY }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/mayankmj/repo-2/dispatches \
-            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"service\": \"$service\", \"version\": \"$version\", \"unit\": false, \"integration\": true}}"
+  call-reusable-workflow:
+    uses: mayankmj/repo-2/.github/workflows/trigger-target-workflow.yml@main
+    # with:
+    #   target_service: ${{ github.event.inputs.target_service }}
+    #   target_version: ${{ github.event.inputs.target_version }}
