--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Trigger repo-2 workflow
         uses: peter-evans/repository-dispatch@v1
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ACTION_KEY }}
           repository: mayankmj/repo-2
           event-type: trigger-workflow
           # client-payload: '{"target_service": "${{ github.event.inputs.target_service }}", "target_version": "${{ github.event.inputs.target_version }}"}'
