--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,5 @@ jobs:
             github.rest.repos.createDispatchEvent({
               owner: 'mayankmj',
               repo: 'repo-2',
-              event_type: 'trigger-workflow',
-              # client_payload: {
-              #   target_service: '${{ github.event.inputs.target_service }}',
-              #   target_version: '${{ github.event.inputs.target_version }}'
-              # }
+              event_type: 'trigger-workflow'
             })
