--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger repo-2 workflow
-        uses: actions/github-script@v6
+        uses: actions/labeler@v4
         with:
-          script: |
-            github.rest.repos.createDispatchEvent({
-              owner: 'mayankmj',
-              repo: 'repo-2',
-              event_type: 'trigger-workflow'
-            })
+          token: ${{ secrets.ACTION_KEY }}
+          repository: mayankmj/repo-2
+          event-type: trigger-workflow
