--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,12 @@ on:
         required: true
 
 jobs:
-  reusable_workflow_job:
+  call-reusable-workflow:
     runs-on: ubuntu-latest
-    environment: production
     steps:
-      - uses: actions/labeler@v4
+      - name: Trigger repo-2 workflow
+        uses: peter-evans/repository-dispatch@v1
         with:
-          repo-token: ${{ secrets.envPAT }}
-          configuration-path: .github/workflows/config.yml
+          token: ${{ secrets.ACTION_KEY }}
+          repository: mayankmj/repo-2
+          event-type: trigger-workflow
