--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger repo-2 workflow
-        # uses: peter-evans/repository-dispatch@v1
+        uses: actions/github-script@v6
         with:
-          token: ${{ secrets.ACTION_KEY }}
-          repository: mayankmj/repo-2
-          event-type: trigger-workflow
+          github-token: ${{ secrets.ACTION_KEY }}
+          script: |
+            const response = await octokit.request('POST /repos/:owner/:repo/dispatches', {
+              owner: 'mayankmj',
+              repo: 'repo-2',
+              event_type: 'trigger-workflow',
+            });
