--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger repo-2 workflow
-        uses: peter-evans/repository-dispatch@v1
+        uses: mayankmj/repo-1/.github/workflows/workflow_02.yml@main
         with:
           # token: ${{ secrets.ACTION_KEY }}
           repository: mayankmj/repo-2
