--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Trigger repo-2 workflow
         uses: mayankmj/repo-1/.github/workflows/workflow_02.yml@main
-        with:
-          # token: ${{ secrets.ACTION_KEY }}
-          repository: mayankmj/repo-2
-          event-type: trigger-workflow
+        # with:
+        #   # token: ${{ secrets.ACTION_KEY }}
+        #   repository: mayankmj/repo-2
+        #   event-type: trigger-workflow
