--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,9 @@ on:
 
 jobs:
   call-reusable-workflow:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Trigger repo-2 workflow
-        uses: mayankmj/repo-1/.github/workflows/workflow_02.yml@main
-        # with:
-        #   token: ${{ secrets.ACTION_KEY }}
-        #   repository: mayankmj/repo-2
-        #   event-type: trigger-workflow
+    uses: mayankmj/repo-1/.github/workflows/workflow_02.yml@main
+    with:
+      # token: ${{ secrets.ACTION_KEY }}
+      # repository: mayankmj/repo-2
+      event-type: trigger-workflow
+
