--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+# .github/workflows/main.yml
 name: Call Reusable Workflow
 
 on:
@@ -14,5 +15,5 @@ jobs:
   call-reusable-workflow:
     uses: mayankmj/repo-2/.github/workflows/main.yml@main
     with:
-      event-type: trigger-workflow
-
+      target_service: ${{ github.event.inputs.target_service }}
+      target_version: ${{ github.event.inputs.target_version }}
