--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,18 @@ on:
 
 jobs:
   call-reusable-workflow:
-    uses: mayankmj/repo-2/.github/workflows/main.yml@main
-    with:
-      event-type: trigger-workflow
-      token: ${{ secrets.ACTION_KEY }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout main repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install composite run steps action
+        run: npm install -g composite-run-steps@latest
+
+      - name: Call Reusable Workflow
+        run: composite-run-steps --file mayankmj/repo-2/.github/workflows/main.yml@main --inputs target_service=${{ github.event.inputs.target_service }} target_version=${{ github.event.inputs.target_version }}
