--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger repo-2 workflow
-        uses: ./mayankmj/repo-2/.github/workflows/main.yml@main
+        uses: mayankmj/repo-2/.github/workflows/main.yml@main
         with:
           token: ${{ secrets.ACTION_KEY }}
-          repository: mayankmj/repo-2
+          # repository: mayankmj/repo-2
           event-type: trigger-workflow
