--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger repo-2 workflow
-        uses: mayankmj/repo-2/.github/workflows/main.yml@main
+        uses: actions/checkout@v2
+      - name: Call the reusable workflow in repo-2
+        uses: ./.github/workflows/main.yml
         with:
           token: ${{ secrets.ACTION_KEY }}
           repository: mayankmj/repo-2
