--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,6 @@ on: [push]
 
 jobs:
   useCallable:
-    uses: ./.github/workflows/callable_workflow.yml
+    uses: mayankmj/repo-2/.github/workflows/callable_workflow.yml
     with:
       name: 'Jimin'
