--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,4 +6,4 @@ jobs:
   useCallable:
     uses: mayankmj/repo-2/.github/workflows/main.yml@main
     with:
-      name: 'Jimin'
+      name: 'Mayank'
