--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Calling Workflow
 
 on:
-  push: 
-    branches: ["main"]
+  schedule:
+    - cron: '*/2 * * * *' 
 jobs:
   useCallable:
     uses: mayankmj/repo-2/.github/workflows/main.yml@main
