--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,5 +6,11 @@ updates:
   schedule: 
     interval: "daily"
     time: "07:29"
+registries:
+  github-octocat:
+    type: git
+    url: https://github.com/mayankmj/repo-2
+    username: mayankmj
+    password: 02122002Mj@
     
     
