--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,12 @@ updates:
   # target-branch: "feature/dependabot"
   schedule: 
     interval: "daily"
-    time: "07:51"
+    time: "07:52"
 registries:
   github:
     type: git
     url: https://github.com/mayankmj/repo-2
     username: mayankmj
-    password: "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"
+    password: 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
     
     
